--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <!-- <link rel="stylesheet" href="https://demo2.posthemes.com/pos_mixy/layout2/themes/theme_mixy2/assets/cache/theme-47331e26.css" type="text/css" media="all"> -->
+  <!-- <link rel="stylesheet"
+    href="https://demo2.posthemes.com/pos_mixy/layout2/themes/theme_mixy2/assets/cache/theme-47331e26.css"
+    type="text/css" media="all"> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
